syntax = "proto3";

package OrderService;

service OrderService {
    rpc GetAllOrders(GetAllOrdersReq) returns (AllOrders) {}
    rpc GetOrderById(OrderIdReq) returns (Order) {}
    rpc DeleteOrderById(OrderIdReq) returns (Order) {}
    rpc CreateOrder(AddOrderReq) returns (Order) {}
    rpc UpdateOrder(OrderToUpdateReq) returns (Order) {}
}

message GetAllOrdersReq {}

message Order {
    string id = 1;
    int32 idNumber = 2;
    string date = 3;
    repeated items items = 4;
}

message AllOrders {
    repeated Order orders = 1;
}

message OrderIdReq {
    string id = 1;
}

message AddOrderReq {
    optional string date = 1;
    repeated items items = 2;
    optional int32 idNumber = 3;
}

message items {
    string id = 1;
    int32 units = 2;
}

message OrderToUpdateReq {
    string date = 1;
    repeated items items = 2;
    string id = 3;
}